[gd_scene load_steps=5 format=3 uid="uid://ugkwnsc57lg8"]

[ext_resource type="Script" uid="uid://debnjeo1e08kg" path="res://src/game.gd" id="1_k4s18"]
[ext_resource type="AudioStream" uid="uid://b7wlfv0vhulb4" path="res://assets/sounds/gameTheme.ogg" id="3_45wkr"]
[ext_resource type="PackedScene" uid="uid://dkmvx83g363rk" path="res://src/shaders.tscn" id="4_kc8ui"]
[ext_resource type="PackedScene" uid="uid://bdamqbyei1iyg" path="res://src/gui.tscn" id="7_c8p7y"]

[node name="Game" type="Node2D" groups=["game"]]
process_mode = 1
position = Vector2(1, 0)
script = ExtResource("1_k4s18")

[node name="Start" type="Marker2D" parent="."]
position = Vector2(121, 338)

[node name="gui" parent="." instance=ExtResource("7_c8p7y")]

[node name="cam" type="Camera2D" parent="." groups=["cam"]]
anchor_mode = 0

[node name="EnemySpawn" type="Timer" parent="."]
wait_time = 6.0

[node name="PowersSpawn" type="Timer" parent="."]
wait_time = 15.0

[node name="rechargeSpecial" type="Timer" parent="."]
wait_time = 0.3

[node name="theme" type="AudioStreamPlayer2D" parent="." groups=["game_theme"]]
stream = ExtResource("3_45wkr")

[node name="changePhase" type="Timer" parent="."]
wait_time = 20.0

[node name="changeEnemySpawnTime" type="Timer" parent="."]
wait_time = 10.0

[node name="shaders" parent="." instance=ExtResource("4_kc8ui")]

[connection signal="timeout" from="EnemySpawn" to="." method="_on_enemy_spawn_timeout"]
[connection signal="timeout" from="PowersSpawn" to="." method="_on_powers_spawn_timeout"]
[connection signal="timeout" from="rechargeSpecial" to="." method="_on_recharge_special_timeout"]
[connection signal="timeout" from="changePhase" to="." method="_on_change_phase_timeout"]
[connection signal="timeout" from="changeEnemySpawnTime" to="." method="_on_change_enemy_spawn_time_timeout"]
